# ocsai-streamlit

./: README.md  config.yaml  pyproject.toml  requirements.txt  score_ocs_api.py
.devcontainer/: devcontainer.json
scripts/: create-config.py
