[project]
name = "ocsai-streamlit"
version = "0.1.0"
description = "A simple Streamlit app for bulk scoring on Open Creativity Scoring (<https://openscoring.du.edu>)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl",
    "pandas",
    "streamlit",
    "numpy",
    "requests",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.2",
]
